--- a/src/app/tab6/tab6.page.html
+++ b/src/app/tab6/tab6.page.html
@@ -9,19 +9,7 @@
   </ion-header>
 
 <ion-content>
-  <ion-grid >
-    <ion-row> 
-      <ion-card>
-        <ion-card-content>
-            <ion-item>
-              <ion-label>URL:</ion-label> 
-              <ion-input placeholder="Ingresa el nombre" [(ngModel)]="urlapi"></ion-input>
-            </ion-item>
-            <div class="ion-text-center">
-                <ion-button expand="block" color="success" (click)="aceptar()">Aceptar</ion-button>
-            </div>
-          </ion-card-content>
-      </ion-card>
-    </ion-row>
-  </ion-grid>
+  <div class="ion-text-center">
+    <ion-button expand="block" color="success" (click)="aceptar()">Cerrar Sesión</ion-button>
+</div>
 </ion-content>
