--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,7 +9,7 @@
 </ion-header>
 <ion-content>
   <ion-grid>
-  <ion-row>
+  <ion-row *ngIf="usuario1 == 'admin'">
     <ion-col> 
       <ion-card>
         <ion-card-header>
@@ -37,9 +37,9 @@
     </ion-col>
     </ion-row>
   </ion-grid>
-    
+
   <ion-grid fixed>
-    <ion-row>
+    <ion-row  *ngIf="usuario1 == 'user' || usuario1 == 'admin'">
       <ion-col *ngFor="let article of articles" size="12" size-lg="3" size-md="4" size-sm="6" size-xs="12">
         <ion-card>
           <ion-card-header>
@@ -47,8 +47,8 @@
             <ion-card-title class="txt-title">Cel: {{ article.cel }} </ion-card-title>
             <ion-card-title class="txt-title">Correo: {{ article.correo }} </ion-card-title>
             <ion-card-title class="txt-title">Puesto: {{ article.puesto }} </ion-card-title>
-            <ion-button expand="full" (click)="editarEmpleado(article.id,article.nombre,article.cel,article.correo,article.puesto)">Editar</ion-button>
-            <ion-button expand="full" color="danger" (click)="eliminarEmpleado(article.id)">Eliminar</ion-button>
+            <ion-button *ngIf="usuario1 == 'admin'" expand="full" (click)="editarEmpleado(article.id,article.nombre,article.cel,article.correo,article.puesto)">Editar</ion-button>
+            <ion-button *ngIf="usuario1 == 'admin'"expand="full" color="danger" (click)="eliminarEmpleado(article.id)">Eliminar</ion-button>
             </ion-card-header>
         </ion-card>
       </ion-col>
