--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -9,7 +9,7 @@
 </ion-header>
 <ion-content>
   <ion-grid>
-    <ion-row>
+    <ion-row *ngIf="usuario1 == 'admin'">
       <ion-card>
         <ion-card-content>
           <ion-item>
@@ -41,7 +41,7 @@
 </ion-grid>
   
   <ion-grid fixed>
-    <ion-row>
+    <ion-row *ngIf="usuario1 == 'user' || usuario1 == 'admin'">
       <ion-col *ngFor="let article of articles" size="12" size-lg="3" size-md="4" size-sm="6" size-xs="12">
         <ion-card>
           <ion-card-header>
@@ -51,8 +51,8 @@
             <ion-card-title class="txt-title">Dirección: {{ article.direccion }} </ion-card-title>
             <ion-card-title class="txt-title">Gerente: {{ article.gerente }} </ion-card-title>
             <ion-card-title class="txt-title">Cel: {{ article.cel }} </ion-card-title>
-            <ion-button expand="full" (click)="editarSucursal(article.id,article.nombre,article.estado,article.direccion,article.gerente,article.cel)">Editar</ion-button>
-            <ion-button expand="full" color="danger" (click)="eliminarSucursal(article.id)">Eliminar</ion-button>
+            <ion-button *ngIf="usuario1 == 'admin'" expand="full" (click)="editarSucursal(article.id,article.nombre,article.estado,article.direccion,article.gerente,article.cel)">Editar</ion-button>
+            <ion-button *ngIf="usuario1 == 'admin'" expand="full" color="danger" (click)="eliminarSucursal(article.id)">Eliminar</ion-button>
             </ion-card-header>
         </ion-card>
       </ion-col>
