--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -27,7 +27,7 @@
       </ion-tab-button>
 
       <ion-tab-button tab="tab6">
-        <ion-icon name="logo-rss"></ion-icon>
+        <ion-icon name="person"></ion-icon>
         <ion-label></ion-label>
       </ion-tab-button>
 
