--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -2,3 +2,29 @@
   max-height: 35vh;
   overflow: hidden;
 }
+
+ion-header, ion-toolbar{
+  --background: #06B5CB;
+  --color: #fff;
+}
+
+ion-contennt {
+  
+  --background: #E5F2F4;
+  --color: #fff;
+}
+
+.cssAgregar {
+  --background: rgb(231, 247, 250);
+  --color: rgb(0,0,0);
+}
+
+.cssBuscar {
+  --background: #E5F3EE;
+  --color: rgb(0,0,0);
+}
+
+.cssGet {
+  --background: #EEEFF5;
+  --color: rgb(0,0,0);
+}
