--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -8,27 +8,38 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-item>
-    <ion-label position="floating">Usuario
-    </ion-label>
-    <ion-input [(ngModel)]="data.username"></ion-input>
+    <ion-item>
+    <img src="assets/img/login.png" width=100% height="100%">
   </ion-item>
-  <ion-item>
-    <ion-label position="floating">Password
-    </ion-label>
-    <ion-input type="password" [(ngModel)]="data.password"></ion-input>
-  </ion-item>
-  <ion-button color="success" (click)="enviar()" expand="full">Enviar</ion-button>
+  <ion-grid >
+      <ion-row> 
+        <ion-card>
+          <ion-card-content>
+            <ion-item>
+              <ion-label >Usuario:</ion-label>
+              <ion-input [(ngModel)]="data.username" placeholder="Ingresa el usuario"></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-label >Password:</ion-label>
+              <ion-input type="password" [(ngModel)]="data.password" placeholder="Ingresa la contraseña"></ion-input>
+            </ion-item>
+            <div class="ion-text-center">
+              <ion-button expand="block" color="success" (click)="enviar()" expand="full">Enviar</ion-button>
+            </div>  
+            </ion-card-content>
+        </ion-card>
+      </ion-row>
+    </ion-grid>
   <ion-grid >
     <ion-row> 
       <ion-card>
         <ion-card-content>
             <ion-item>
               <ion-label>URL:</ion-label> 
-              <ion-input placeholder="Ingresa el nombre" [(ngModel)]="urlapi"></ion-input>
+              <ion-input placeholder="Ingresa la URL" [(ngModel)]="urlapi"></ion-input>
             </ion-item>
             <div class="ion-text-center">
-                <ion-button expand="block" color="success" (click)="aceptar()">Aceptar</ion-button>
+                <ion-button expand="block" color="primary" (click)="aceptar()">Aceptar</ion-button>
             </div>
           </ion-card-content>
       </ion-card>
