--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -11,22 +11,22 @@
   <ion-grid>
   <ion-row *ngIf="usuario1 == 'admin'">
     <ion-col> 
-      <ion-card>
-        <ion-card-header>
-            <ion-item>
-              <ion-label>Nombre:</ion-label>
+      <ion-card class="cssAgregar">
+        <ion-card-header class="cssAgregar">
+            <ion-item class="cssAgregar">
+              <ion-label><b>Nombre:</b></ion-label>
               <ion-input placeholder="Ingresa el nombre" [(ngModel)]="nombre"></ion-input>
             </ion-item>
-            <ion-item>
-              <ion-label>Cel:</ion-label>
+            <ion-item class="cssAgregar">
+              <ion-label><b>Cel:</b></ion-label>
               <ion-input placeholder="Ingresa el celular" [(ngModel)]="cel"></ion-input>
             </ion-item>
-            <ion-item>
-              <ion-label>Correo:</ion-label>
+            <ion-item class="cssAgregar">
+              <ion-label><b>Correo:</b></ion-label>
               <ion-input placeholder="Ingresa el correo" [(ngModel)]="correo"></ion-input>
             </ion-item>
-            <ion-item>
-              <ion-label>Puesto:</ion-label>
+            <ion-item class="cssAgregar">
+              <ion-label><b>Puesto:</b></ion-label>
               <ion-input placeholder="Ingresa el puesto" [(ngModel)]="puesto"></ion-input>
             </ion-item>
             <div class="ion-text-center">
@@ -40,13 +40,15 @@
 
   <ion-grid fixed>
     <ion-row  *ngIf="usuario1 == 'user' || usuario1 == 'admin'">
+      <ion-searchbar class="cssBuscar" [(ngModel)]="miBuscador"></ion-searchbar> 
       <ion-col *ngFor="let article of articles" size="12" size-lg="3" size-md="4" size-sm="6" size-xs="12">
-        <ion-card>
-          <ion-card-header>
-            <ion-card-title class="txt-title">Nombre: {{ article.nombre }} </ion-card-title>
-            <ion-card-title class="txt-title">Cel: {{ article.cel }} </ion-card-title>
-            <ion-card-title class="txt-title">Correo: {{ article.correo }} </ion-card-title>
-            <ion-card-title class="txt-title">Puesto: {{ article.puesto }} </ion-card-title>
+        <ion-card *ngIf="article.nombre == miBuscador || miBuscador == '' || article.cel == miBuscador
+        || article.correo == miBuscador || article.puesto == miBuscador">
+          <ion-card-header class="cssGet">
+            <ion-card-title class="txt-title"><b>Nombre:</b> {{ article.nombre }} </ion-card-title>
+            <ion-card-title class="txt-title"><b>Cel:</b> {{ article.cel }} </ion-card-title>
+            <ion-card-title class="txt-title"><b>Correo:</b> {{ article.correo }} </ion-card-title>
+            <ion-card-title class="txt-title"><b>Puesto:</b> {{ article.puesto }} </ion-card-title>
             <ion-button *ngIf="usuario1 == 'admin'" expand="full" (click)="editarEmpleado(article.id,article.nombre,article.cel,article.correo,article.puesto)">Editar</ion-button>
             <ion-button *ngIf="usuario1 == 'admin'"expand="full" color="danger" (click)="eliminarEmpleado(article.id)">Eliminar</ion-button>
             </ion-card-header>
