--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -10,22 +10,22 @@
 <ion-content>
   <ion-grid>
     <ion-row *ngIf="usuario1 == 'admin'"> 
-      <ion-card>
-        <ion-card-content>
-            <ion-item>
-              <ion-label>Nombre:</ion-label> 
+      <ion-card class="cssAgregar">
+        <ion-card-content class="cssAgregar">
+            <ion-item class="cssAgregar">
+              <ion-label><b>Nombre:</b></ion-label> 
               <ion-input placeholder="Ingresa el nombre" [(ngModel)]="nombre"></ion-input>
             </ion-item>
-            <ion-item>
-              <ion-label>Descripción:</ion-label>
+            <ion-item class="cssAgregar">
+              <ion-label><b>Descripción:</b></ion-label>
               <ion-input placeholder="Ingresa la descripción" [(ngModel)]="descripcion"></ion-input>
             </ion-item>
-            <ion-item>
-              <ion-label>Cantidad:</ion-label>
+            <ion-item class="cssAgregar">
+              <ion-label><b>Cantidad:</b></ion-label>
               <ion-input placeholder="Ingresa la cantidad" [(ngModel)]="cantidad"></ion-input>
             </ion-item>
-            <ion-item>
-              <ion-label>Costo:</ion-label>
+            <ion-item class="cssAgregar">
+              <ion-label><b>Costo:</b></ion-label>
               <ion-input placeholder="Ingresa el costo" [(ngModel)]="costo"></ion-input>
             </ion-item>
             <div class="ion-text-center">
@@ -38,14 +38,15 @@
     
   <ion-grid fixed>
     <ion-row *ngIf="usuario1 == 'user' || usuario1 == 'admin'">
+      <ion-searchbar class="cssBuscar" [(ngModel)]="miBuscador"></ion-searchbar>
       <ion-col *ngFor="let article of articles" size="12" size-lg="3" size-md="4" size-sm="6" size-xs="12">
-        <ion-card>
-          <ion-card-header>
+        <ion-card *ngIf="article.nombre == miBuscador || miBuscador == '' || article.descripcion == miBuscador">
+          <ion-card-header class="cssGet">
             <!--<ion-card-title class="txt-title">ID: {{ article.id }}</ion-card-title>-->
-            <ion-card-title class="txt-title">Nombre: {{ article.nombre }} </ion-card-title>
-            <ion-card-title class="txt-title">Descripción: {{ article.descripcion }} </ion-card-title>
-            <ion-card-title class="txt-title">Cantidad: {{ article.cantidad }} </ion-card-title>
-            <ion-card-title class="txt-title">Costo: {{ article.costo }} </ion-card-title>
+            <ion-card-title class="txt-title"><b>Nombre:</b> {{ article.nombre }} </ion-card-title>
+            <ion-card-title class="txt-title"><b>Descripción:</b> {{ article.descripcion }} </ion-card-title>
+            <ion-card-title class="txt-title"><b>Cantidad:</b> {{ article.cantidad }} </ion-card-title>
+            <ion-card-title class="txt-title"><b>Costo:</b> {{ article.costo }} </ion-card-title>
             <ion-button *ngIf="usuario1 == 'admin'" expand="full" (click)="editarMedicina(article.id,article.nombre,article.descripcion,article.cantidad,article.costo)">Editar</ion-button>
             <ion-button *ngIf="usuario1 == 'admin'" expand="full" color="danger" (click)="eliminarMedicina(article.id)">Eliminar</ion-button>
             </ion-card-header>
