--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -10,26 +10,26 @@
 <ion-content>
   <ion-grid>
     <ion-row *ngIf="usuario1 == 'admin'">
-      <ion-card>
-        <ion-card-content>
-            <ion-item>
-              <ion-label>Nombre:</ion-label> 
+      <ion-card class="cssAgregar">
+        <ion-card-content class="cssAgregar">
+            <ion-item class="cssAgregar">
+              <ion-label><b>Dueño:</b></ion-label> 
               <ion-input placeholder="Ingresa el nombre" [(ngModel)]="nombre"></ion-input>
             </ion-item>
-            <ion-item>
-              <ion-label>Cel:</ion-label>
+            <ion-item class="cssAgregar">
+              <ion-label><b>Cel:</b></ion-label>
               <ion-input placeholder="Ingresa el cel" [(ngModel)]="cel"></ion-input>
             </ion-item>
-            <ion-item>
-              <ion-label>Mascota:</ion-label>
+            <ion-item class="cssAgregar">
+              <ion-label><b>Mascota:</b></ion-label>
               <ion-input placeholder="Ingresa la mascota" [(ngModel)]="mascota"></ion-input>
             </ion-item>
-            <ion-item>
-              <ion-label>Raza:</ion-label>
+            <ion-item class="cssAgregar">
+              <ion-label><b>Raza:</b></ion-label>
               <ion-input placeholder="Ingresa el raza" [(ngModel)]="raza"></ion-input>
             </ion-item>
-            <ion-item>
-              <ion-label>Color:</ion-label>
+            <ion-item class="cssAgregar">
+              <ion-label><b>Color:</b></ion-label>
               <ion-input placeholder="Ingresa el rcolor" [(ngModel)]="color"></ion-input>
             </ion-item>
             <div class="ion-text-center">
@@ -42,15 +42,17 @@
     
   <ion-grid fixed>
     <ion-row *ngIf="usuario1 == 'user' || usuario1 == 'admin'">
+      <ion-searchbar class="cssBuscar" [(ngModel)]="miBuscador"></ion-searchbar>
       <ion-col *ngFor="let article of articles" size="12" size-lg="3" size-md="4" size-sm="6" size-xs="12">
-        <ion-card>
-          <ion-card-header>
+        <ion-card *ngIf="article.nombre == miBuscador || miBuscador == '' || article.cel == miBuscador
+        || article.mascota == miBuscador || article.raza == miBuscador || article.color == miBuscador">
+          <ion-card-header class="cssGet">
             <!--<ion-card-title class="txt-title">ID: {{ article.id }}</ion-card-title>-->
-            <ion-card-title class="txt-title">Nombre: {{ article.nombre }} </ion-card-title>
-            <ion-card-title class="txt-title">Cel: {{ article.cel }} </ion-card-title>
-            <ion-card-title class="txt-title">Mascota: {{ article.mascota }} </ion-card-title>
-            <ion-card-title class="txt-title">Raza: {{ article.raza }} </ion-card-title>
-            <ion-card-title class="txt-title">Color: {{ article.color }} </ion-card-title>
+            <ion-card-title class="txt-title"><b>Dueño:</b> {{ article.nombre }} </ion-card-title>
+            <ion-card-title class="txt-title"><b>Cel:</b> {{ article.cel }} </ion-card-title>
+            <ion-card-title class="txt-title"><b>Mascota:</b> {{ article.mascota }} </ion-card-title>
+            <ion-card-title class="txt-title"><b>Raza:</b> {{ article.raza }} </ion-card-title>
+            <ion-card-title class="txt-title"><b>Color:</b> {{ article.color }} </ion-card-title>
             <ion-button *ngIf="usuario1 == 'admin'" expand="full" (click)="editarMascota(article.id,article.nombre,article.cel,article.mascota,article.raza,article.color)">Editar</ion-button>
             <ion-button *ngIf="usuario1 == 'admin'" expand="full" color="danger" (click)="eliminarMascota(article.id)">Eliminar</ion-button>
             </ion-card-header>
