--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -10,25 +10,25 @@
 <ion-content>
   <ion-grid>
     <ion-row *ngIf="usuario1 == 'admin'">
-      <ion-card>
-        <ion-card-content>
-          <ion-item>
+      <ion-card class="cssAgregar">
+        <ion-card-content class="cssAgregar">
+          <ion-item class="cssAgregar">
             <ion-label>Nombre:</ion-label> 
             <ion-input placeholder="Ingresa el nombre" [(ngModel)]="nombre"></ion-input>
           </ion-item>
-          <ion-item>
+          <ion-item class="cssAgregar">
             <ion-label>Estado:</ion-label>
             <ion-input placeholder="Ingresa el estado" [(ngModel)]="estado"></ion-input>
           </ion-item>
-          <ion-item>
+          <ion-item class="cssAgregar">
             <ion-label>Dirección:</ion-label>
             <ion-input placeholder="Ingresa la dirección" [(ngModel)]="direccion"></ion-input>
           </ion-item>
-          <ion-item>
+          <ion-item class="cssAgregar">
             <ion-label>Gerente:</ion-label>
             <ion-input placeholder="Ingresa el gerente" [(ngModel)]="gerente"></ion-input>
           </ion-item>
-          <ion-item>
+          <ion-item class="cssAgregar">
             <ion-label>Cel:</ion-label>
             <ion-input placeholder="Ingresa el cel" [(ngModel)]="cel"></ion-input>
           </ion-item>
@@ -42,15 +42,17 @@
   
   <ion-grid fixed>
     <ion-row *ngIf="usuario1 == 'user' || usuario1 == 'admin'">
+      <ion-searchbar class="cssBuscar" [(ngModel)]="miBuscador"></ion-searchbar>
       <ion-col *ngFor="let article of articles" size="12" size-lg="3" size-md="4" size-sm="6" size-xs="12">
-        <ion-card>
-          <ion-card-header>
+        <ion-card *ngIf="article.nombre == miBuscador || miBuscador == '' || article.descripcion == miBuscador
+        || article.direccion == miBuscador || article.cel == miBuscador"> 
+          <ion-card-header class="cssGet">
             <!--<ion-card-title class="txt-title">ID: {{ article.id }}</ion-card-title>-->
-            <ion-card-title class="txt-title">Nombre: {{ article.nombre }} </ion-card-title>
-            <ion-card-title class="txt-title">Descripción: {{ article.estado }} </ion-card-title>
-            <ion-card-title class="txt-title">Dirección: {{ article.direccion }} </ion-card-title>
-            <ion-card-title class="txt-title">Gerente: {{ article.gerente }} </ion-card-title>
-            <ion-card-title class="txt-title">Cel: {{ article.cel }} </ion-card-title>
+            <ion-card-title class="txt-title"><b>Nombre:</b> {{ article.nombre }} </ion-card-title>
+            <ion-card-title class="txt-title"><b>Descripción:</b> {{ article.estado }} </ion-card-title>
+            <ion-card-title class="txt-title"><b>Dirección:</b> {{ article.direccion }} </ion-card-title>
+            <ion-card-title class="txt-title"><b>Gerente:</b> {{ article.gerente }} </ion-card-title>
+            <ion-card-title class="txt-title"><b>Cel:</b> {{ article.cel }} </ion-card-title>
             <ion-button *ngIf="usuario1 == 'admin'" expand="full" (click)="editarSucursal(article.id,article.nombre,article.estado,article.direccion,article.gerente,article.cel)">Editar</ion-button>
             <ion-button *ngIf="usuario1 == 'admin'" expand="full" color="danger" (click)="eliminarSucursal(article.id)">Eliminar</ion-button>
             </ion-card-header>
